--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
         <title>Время больших умов</title>
     </head>
     <body>
-        <button type = "button" id = "Start" onclick="">START</button>
+        
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/pixi.js/5.1.3/pixi.min.js"></script>
         <script src= "test.js" ></script>
     </body>
 </html>
